--- a/docs/style.css
+++ b/docs/style.css
@@ -14,9 +14,13 @@ li {
   overflow: hidden;
   color: #E2DBD1;
   white-space: nowrap;
+  padding-left: 10px;
+}
+ul {
+  padding-left: 0px;
 }
 li.done {
-  background: #51BA64;
+  background: #77AC6E;
   color: #6B6B6B;
   text-decoration: line-through;
   overflow: hidden;
@@ -29,6 +33,7 @@ p {
   cursor: row-resize;
   overflow: hidden;
   color: #FFFFFF;
+  padding-left: 10px;
 }
 p#del {
   background: #AC726E;
@@ -55,6 +60,7 @@ footer {
 h1 {
   background: #DCD6CD;
   padding: 10px;
+  white-space: nowrap;
 }
 button {
   border: none;
@@ -71,7 +77,7 @@ input {
   padding: 5px;
   background: #DCD6CD;
   color: #606060;
-  width: 24.5%;
+  width: 24.55%;
 }
 input:focus {
   outline:none !important;
