--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h1 {
 }
 button {
   border: none;
-  border-radius: 0px;
+  border-radius: 0px !important;
   border-bottom: 2px solid #606060;
   padding: 5px;
   background: #DCD6CD;
