--- a/docs/style.css
+++ b/docs/style.css
@@ -72,7 +72,7 @@ button {
 }
 input {
   border: none;
-  border-radius: 0px;
+  border-radius: 0px !important;
   border-bottom: 2px solid #606060;
   padding: 5px;
   background: #DCD6CD;
